cmake_minimum_required(VERSION 3.15)
project(Competitive_Programming_III)

set(CMAKE_CXX_STANDARD 14)

add_executable(Competitive_Programming_III 4Sum.cpp Cashier.cpp HappyNumber.cpp MiddleNodeLinkedList.cpp GroupAnagrams.cpp BackspaceStringCompare.cpp MinStack.cpp MinStackOptimized.cpp DiameterBinaryTree.cpp SameTree.cpp LastStoneWeight.cpp Contiguous_Array.cpp StringShift.cpp Product_of_Array_Except_Self.cpp MoveZeroes.cpp MaxSubarray.cpp ValidParenthesisString.cpp Number_of_Islands.cpp Minimum_Path_Sum.cpp RotatedSortedArray.cpp Buy_Sell_Stock_II.cpp BinarySearchTreeFromPreOrderTraversal.cpp Merge_Two_Binary_Trees.cpp BinaryMatrix.cpp)
add_executable(4Sum 4Sum.cpp)
add_executable(SearchInsert SearchInsert.cpp)
add_executable(Multiply Multiply.cpp)
add_executable(AlphabetCode AlphabetCode.cpp)
add_executable(PairCodility PairCodility.cpp)
add_executable(BinaryTreeInorder BinaryTreeInorder.cpp)
add_executable(SingleNumber SingleNumber.cpp)
add_executable(HappyNumber HappyNumber.cpp)
add_executable(CountingElements CountingElements.cpp)
add_executable(MiddleNodeLinkedList MiddleNodeLinkedList.cpp)
add_executable(GroupAnagrams GroupAnagrams.cpp)
add_executable(BackspaceStringCompare BackspaceStringCompare.cpp)
add_executable(MinStack MinStack.cpp)
add_executable(MinStackOptimized MinStackOptimized.cpp)
add_executable(DiameterBinaryTree DiameterBinaryTree.cpp)
add_executable(SameTree SameTree.cpp)
add_executable(LastStoneWeight LastStoneWeight.cpp)
add_executable(Contiguous_Array Contiguous_Array.cpp)
add_executable(StringShift StringShift.cpp)
add_executable(Product_of_Array_Except_Self Product_of_Array_Except_Self.cpp)
add_executable(MoveZeroes MoveZeroes.cpp)
add_executable(MaxSubarray MaxSubarray.cpp)
add_executable(ValidParenthesisString ValidParenthesisString.cpp)
add_executable(Number_of_Islands Number_of_Islands.cpp)
add_executable(Minimum_Path_Sum Minimum_Path_Sum.cpp)
add_executable(RotatedSortedArray RotatedSortedArray.cpp)
add_executable(Buy_Sell_Stock_II Buy_Sell_Stock_II.cpp)
add_executable(BinarySearchTreeFromPreOrderTraversal BinarySearchTreeFromPreOrderTraversal.cpp)
add_executable(Merge_Two_Binary_Trees Merge_Two_Binary_Trees.cpp)
add_executable(BinaryMatrix BinaryMatrix.cpp)
#add_executable(Cashier Cashier.cpp 4Sum.cpp)
#add_executable(4Sum 4Sum.cpp)
#add_executable(AtTheGates AtTheGates.cpp)